@@ -1,3 +1,6 @@
+# If your config is missing full comments, view a commented version of the config here: https://github.com/booksaw/BetterTeams/blob/master/config.yml
+# This problem is caused by adding new values to the config, in the process comments are deleted
+
 ####################################################################
 #    ____       _   _              _____                           #
 #   | __ )  ___| |_| |_ ___ _ __  |_   _|__  __ _ _ __ ___  ___    #
@@ -6,6 +9,7 @@
 #   |____/ \___|\__|\__\___|_|      |_|\___|\__,_|_| |_| |_|___/   #
 #                                                                  #
 ####################################################################
+
 
 # Thank you for downloading better teams, before configuring the file here are some useful links for you:
 # BetterTeams spigot page: https://www.spigotmc.org/resources/better-teams.17129/
@@ -216,7 +220,32 @@ maxChests: 2
 # Possible values: [true, false]
 allowAllyChests: true
 
+# Used to add new aliases for betterteams commands
+# Anything listed here can be used instead of the base commands (/team and /teamadmin)
+# 
+# Possible values: [Any set of lower case letters]
+command:
+   team: []
+   teamadmin: 
+   - teama
+
+
+#####################################################################
+#                                                                   #
+#  ____                       ____       _   _   _                  #
+# / ___|  ___ ___  _ __ ___  / ___|  ___| |_| |_(_)_ __   __ _ ___  #
+# \___ \ / __/ _ \| '__/ _ \ \___ \ / _ \ __| __| | '_ \ / _` / __| #
+#  ___) | (_| (_) | | |  __/  ___) |  __/ |_| |_| | | | | (_| \__ \ # 
+# |____/ \___\___/|_|  \___| |____/ \___|\__|\__|_|_| |_|\__, |___/ #
+#                                                        |___/      #
+#                                                                   #
+#####################################################################
+# All settings dependong on the score aspect of this plugin
+# For integrations of other plugins with score see the bottom section of the config
+ 
+
 # This is a list of commands which are run by the console before a purge occurs
+# A purge is where all teams scores are reset to 0
 # If this is left blank, no commands will be run before a purge occurs
 # You can use placeholders from placeholder API, though the player is set to be null (so things like %betterteams_team% will not work) 
 #    the main reason for the placeholders is so you can use %betterteams_score_{rank}% to refrence a player on the leaderboard
@@ -224,7 +253,6 @@ allowAllyChests: true
 # Possible values: [Any command valid on your server]
 purgeCommands:
 - 'give @a minecraft:dirt 1'
-- 
 
 # This is used to track when the next purge should occur. This is a list of dates where a purge will be run 
 # If this list is left blank, no purges will occur
@@ -235,28 +263,32 @@ autoPurge:
 #- 1:6
 # This will purge the users score at 6am on the first of every month
 
-# This is used to determine how many points a team will lose if one of their members dies
-# If you do not want this feature, set it to 0
-# 
-# Possible values: [0, any positive whole number]
-pointsLostByDeath: 0
-
-# This is used to determine how many points a player gets for killing another player
-# - If a player kills a member of their own team, this number of points will be taken from the team 
+# The amount of time after an event occurs that repeat events are classed as spam
+# This is in seconds
+# Recognising spam is useful as it means players cannot spam kill 1 person to get score, this means you can give spam kills reduced score 
+# - The spam kill tracker is unique to every event, so dying will not activate the spam timer on kills
 #
-# Possible values: [Any whole number]
-scoreForKill: 1
+# Possible values: [Any whole number, 0 to disable]
+spamThreshold: 60
 
-# Used to add new aliases for betterteams commands
-# Anything listed here can be used instead of the base commands (/team and /teamadmin)
-# 
-# Possible values: [Any set of lower case letters]
-command:
-   team: []
-   teamadmin: 
-   - teama
+# MAKE SURE YOU READ SPAM THRESHOLD COMMENTS ABOVE
+# If something happens on your server you want to influence score is not listed below, make a request for it here: https://github.com/booksaw/BetterTeams/issues/new/choose
 
-################################################################################
+# Score changes for when a player dies
+events: 
+   death:
+      score: 0
+      spam: -1
+
+# Score changes for when a player kills another player
+   kill:
+      score: 1
+      spam: 0
+
+
+
+
+###############################################################################
 #                                                                             #
 #  __  __ _                            __ _     _____                         #
 # |  \/  (_)_ __   ___  ___ _ __ __ _ / _| |_  |_   _|__  __ _ _ __ ___  ___  #
